test/samples/invalid/multiplyingUndeclaredVariables.ygl
node Foo {
    out {
        int result;
    }

    process {
        out.result = a * b;
    }
}